Blog related api are complete!

--- a/BloggerApp/Web.config
+++ b/BloggerApp/Web.config
@@ -10,7 +10,7 @@
   </configSections>
    <!-- Added Connection String for EmployeeDBEntities , which is already present in App.Config file -->
   <connectionStrings>
-    <add name="BloggerAppDBEntities" connectionString="metadata=res://*/BlogDataModel.csdl|res://*/BlogDataModel.ssdl|res://*/BlogDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=BloggerAppDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BloggerAppDBEntities" connectionString="metadata=res://*/BlogsDataModel.csdl|res://*/BlogsDataModel.ssdl|res://*/BlogsDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=BloggerAppDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -46,6 +46,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
