--- a/BloggerApp/BloggerApp.csproj
+++ b/BloggerApp/BloggerApp.csproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BloggerController.cs" />
     <Compile Include="Controllers\BlogsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
