--- a/BloggerApp/packages.config
+++ b/BloggerApp/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.5" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
